Complete project - needs to be refactored

--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,9 @@ body {
         margin-bottom: 20px;
     }
 }
+
+@media (max-width: 500px) {
+    .app_stats {
+        flex-direction: column;
+    }
+}
