--- a/src/LeftContainer/InfoBoxStats/InfoBoxStats.css
+++ b/src/LeftContainer/InfoBoxStats/InfoBoxStats.css
@@ -7,4 +7,7 @@
     .app_stats {
         flex-direction: column;
     }
+    .app_stats *:not(:last-child) {
+        margin-bottom: 10px;
+    }
 }
